# Bine

./: Bine.cabal  README.md  TODO.md  stack.yaml
app/: Main.hs
asm/: os.config  os.s
scripts/: make_os  run_bbc
src/: Core.hs  FileSystems.hs  KeyInput.hs  MetaData.hs  Monad6502.hs  MonadInput.hs  OSBYTE.hs  OSCLI.hs  OSFILE.hs  OSFIND.hs  OSWORD.hs  State6502.hs  TraceLog.hs  Utils.hs  VDUOutput.hs  VirtualBBC.hs
unpack/: Main.hs
