name:                Bine
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Bine#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O5 -fwarn-missing-signatures -funbox-strict-fields -fsimpl-tick-factor=200
  exposed-modules:     Core, Intel, Binary, VirtualBBC, OSFIND, OSFILE, OSCLI, OSWORD, OSBYTE, Monad6502, Utils, State6502, FileSystems, MetaData
  build-depends:       base >= 4.7 && < 5
                     , sdl2
                     , bytestring
                     , vector
                     , process
                     , containers
                     , OpenGL
                     , array
                     , mtl
                     , lens
                     , binary
                     , parsec
                     , haskeline
                     , random
                     , time
  default-language:    Haskell2010

executable bine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O5 -fwarn-missing-signatures -funbox-strict-fields -fsimpl-tick-factor=200
  build-depends:       base
                     , sdl2
                     , bytestring
                     , unix
                     , vector
                     , array
                     , containers
                     , mtl
                     , lens
                     , binary
                     , Bine
                     , cmdargs
                     , monad-loops
                     , parsec
                     , haskeline
                     , time
  default-language:    Haskell2010

executable unpack-exe
  hs-source-dirs:      unpack
  main-is:             Main.hs
  ghc-options:         -O5 -fwarn-missing-signatures -funbox-strict-fields -fsimpl-tick-factor=200
  build-depends:       base
                     , sdl2
                     , bytestring
                     , unix
                     , vector
                     , array
                     , containers
                     , mtl
                     , lens
                     , binary
                     , Bine
                     , cmdargs
                     , monad-loops
                     , parsec
                     , haskeline
                     , time
  default-language:    Haskell2010

test-suite emu6502-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , emu6502
                     , HUnit
                     , array
                     , mtl
                     , lens
                     , monad-loops
  ghc-options:         -O5 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/emu6502
